Fixed icon spacing.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -61,3 +61,7 @@ footer {
     }
   }
 }
+
+.icon {
+  margin-top: $padding-large-vertical;
+}
